--- a/stock_screener.ipynb
+++ b/stock_screener.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4UPFp2VPGMBKw+8cz6uki",
+      "authorship_tag": "ABX9TyO4OMA9/GwF3LAF6dGiCHGQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,57 +40,31 @@
     {
       "cell_type": "code",
       "source": [
-        "def stock_screener(csv_url):\n",
-        "    \"\"\"Filter the data sorted in csv based on multiple criteria.\n",
-        "\n",
-        "    :param csv_url: Collected data in csv format\n",
-        "    :return: the list of screener result\n",
-        "    \"\"\"\n",
-        "\n",
-        "    df = pd.read_csv(csv_url)\n",
-        "    display(df)\n",
-        "    # capitalization in reporting currency\n",
-        "    capitalization = df['Price'] * df['Shares'] * df['Fx_rate']\n",
-        "    print(capitalization)\n",
-        "    total_debt = df['CurrentDebtAndCapitalLeaseObligation'] + df['LongTermDebtAndCapitalLeaseObligation']\n",
-        "    print(total_debt)\n",
-        "    enterprise_value = capitalization + total_debt + df['MinorityInterest'] - df['CashAndCashEquivalents']\n",
-        "    # more easily realizable non-operating assets\n",
-        "    monetary_assets = df['OtherShortTermInvestments'] + df['InvestmentinFinancialAssets']\n",
-        "    # less easily realizable non-operating assets\n",
-        "    fixed_nonop_assets = (df['InvestmentProperties'] + df['LongTermEquityInvestment']) * 0.5\n",
-        "    # liquidity_coverage_ratio\n",
-        "    lcr = monetary_assets / df['CurrentLiabilities']\n",
-        "    current_ratio = df['CurrentAssets'] / df['CurrentLiabilities']\n",
-        "\n",
-        "    # filter conditions\n",
-        "    condition_1 = df['CashAndCashEquivalents'] > df['CurrentDebtAndCapitalLeaseObligation']\n",
-        "    condition_2 = lcr >= 1 \n",
-        "\n",
-        "    display(df.loc[condition_1 & condition_2])"
-      ],
-      "metadata": {
-        "id": "QRfA0mKCKIUo"
-      },
-      "execution_count": 10,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "summary_url = 'https://raw.githubusercontent.com/JerryChenz/InvestmentManagement/master/financial_models/Opportunities/Monitor/screener_summary.csv'\n",
+        "df = pd.read_csv(summary_url)\n",
+        "display(df)\n",
         "\n",
-        "stock_screener(summary_url)"
+        "# capitalization in reporting currency\n",
+        "capitalization = df['Price'] * df['Shares'] * df['Fx_rate']\n",
+        "total_debt = df['CurrentDebtAndCapitalLeaseObligation'] + df['LongTermDebtAndCapitalLeaseObligation']\n",
+        "enterprise_value = capitalization + total_debt + df['MinorityInterest'] - df['CashAndCashEquivalents']\n",
+        "# more easily realizable non-operating assets\n",
+        "monetary_assets = df['OtherShortTermInvestments'] + df['InvestmentinFinancialAssets']\n",
+        "# less easily realizable non-operating assets\n",
+        "fixed_nonop_assets = (df['InvestmentProperties'] + df['LongTermEquityInvestment']) * 0.5\n",
+        "# liquidity_coverage_ratio\n",
+        "lcr = monetary_assets / df['CurrentLiabilities']\n",
+        "current_ratio = df['CurrentAssets'] / df['CurrentLiabilities']"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 458
+          "height": 240
         },
-        "id": "sToi5OEXDH_c",
-        "outputId": "f5cce638-976f-4cb4-9ed7-3824e741e200"
+        "id": "QRfA0mKCKIUo",
+        "outputId": "9bab3ddb-efeb-4a1a-bca8-41e5818315ff"
       },
-      "execution_count": 11,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -128,7 +102,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-707a9f7f-de55-4f5d-babf-744976213f5f\">\n",
+              "  <div id=\"df-8dbdd800-e309-4570-bf4b-2ea29b726e72\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -224,7 +198,7 @@
               "</table>\n",
               "<p>2 rows × 30 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-707a9f7f-de55-4f5d-babf-744976213f5f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8dbdd800-e309-4570-bf4b-2ea29b726e72')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -275,12 +249,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-707a9f7f-de55-4f5d-babf-744976213f5f button.colab-df-convert');\n",
+              "          document.querySelector('#df-8dbdd800-e309-4570-bf4b-2ea29b726e72 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-707a9f7f-de55-4f5d-babf-744976213f5f');\n",
+              "          const element = document.querySelector('#df-8dbdd800-e309-4570-bf4b-2ea29b726e72');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -303,21 +277,40 @@
             ]
           },
           "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# filter conditions\n",
+        "condition_1 = df['CashAndCashEquivalents'] > df['CurrentDebtAndCapitalLeaseObligation']\n",
+        "condition_2 = lcr >= 1 "
+      ],
+      "metadata": {
+        "id": "sToi5OEXDH_c"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Result df\n",
+        "df.loc[condition_1 &condition_2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 191
         },
+        "id": "lZNCJ7ByIXAI",
+        "outputId": "f56f5449-c423-4718-9a03-578ab5ed98b4"
+      },
+      "execution_count": 21,
+      "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0    5.571466e+09\n",
-            "1    7.013597e+09\n",
-            "dtype: float64\n",
-            "0    128283000.0\n",
-            "1     11212000.0\n",
-            "dtype: float64\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "    Ticker   TotalAssets  CurrentAssets  CurrentLiabilities  \\\n",
@@ -345,7 +338,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-24a2c51b-b9b0-40d6-adf3-8032cbe41877\">\n",
+              "  <div id=\"df-5163a49a-26e9-45f1-8bf2-3c1c7e08b309\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -417,7 +410,7 @@
               "</table>\n",
               "<p>1 rows × 30 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-24a2c51b-b9b0-40d6-adf3-8032cbe41877')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5163a49a-26e9-45f1-8bf2-3c1c7e08b309')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -468,12 +461,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-24a2c51b-b9b0-40d6-adf3-8032cbe41877 button.colab-df-convert');\n",
+              "          document.querySelector('#df-5163a49a-26e9-45f1-8bf2-3c1c7e08b309 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-24a2c51b-b9b0-40d6-adf3-8032cbe41877');\n",
+              "          const element = document.querySelector('#df-5163a49a-26e9-45f1-8bf2-3c1c7e08b309');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -495,7 +488,8 @@
               "  "
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
