--- a/stock_screener.ipynb
+++ b/stock_screener.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4OMA9/GwF3LAF6dGiCHGQ",
+      "authorship_tag": "ABX9TyPfOiFsoli1V4+s1rCp4vz3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,23 +27,33 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import pandas as pd"
+        "## Step 1: Set inputs\n",
+        "\n",
+        "We load the sample dataset from the my github repository, and display the dataset in pandas."
       ],
       "metadata": {
-        "id": "9p_rDCW-RpqW"
+        "id": "AvhcZodMER6Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "summary_url = 'https://raw.githubusercontent.com/JerryChenz/InvestmentManagement/master/financial_models/Opportunities/Monitor/screener_summary.csv'\n",
+        "df = pd.read_csv(summary_url)\n",
+        "display(df)"
+      ],
+      "metadata": {
+        "id": "WVHjB0MTEYqv"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "summary_url = 'https://raw.githubusercontent.com/JerryChenz/InvestmentManagement/master/financial_models/Opportunities/Monitor/screener_summary.csv'\n",
-        "df = pd.read_csv(summary_url)\n",
-        "display(df)\n",
-        "\n",
         "# capitalization in reporting currency\n",
         "capitalization = df['Price'] * df['Shares'] * df['Fx_rate']\n",
         "total_debt = df['CurrentDebtAndCapitalLeaseObligation'] + df['LongTermDebtAndCapitalLeaseObligation']\n",
@@ -64,7 +74,7 @@
         "id": "QRfA0mKCKIUo",
         "outputId": "9bab3ddb-efeb-4a1a-bca8-41e5818315ff"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,6 +291,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 2: Screening Criteria"
+      ],
+      "metadata": {
+        "id": "Jah6MC87FKTG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# filter conditions\n",
@@ -290,8 +309,19 @@
       "metadata": {
         "id": "sToi5OEXDH_c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Step 3. Output\n",
+        "\n",
+        "Filter the dataset using the above conditions"
+      ],
+      "metadata": {
+        "id": "UUoKUvvyE6UM"
+      }
     },
     {
       "cell_type": "code",
@@ -307,7 +337,7 @@
         "id": "lZNCJ7ByIXAI",
         "outputId": "f56f5449-c423-4718-9a03-578ab5ed98b4"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
