--- a/stock_screener.ipynb
+++ b/stock_screener.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSnc89WIDfWly/Wo0JGkM4",
+      "authorship_tag": "ABX9TyNtgvJ/Q8M4Pz+LWffYG9QT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "summary_url = 'https://raw.githubusercontent.com/JerryChenz/InvestmentManagement/master/financial_models/Opportunities/Monitor/screener_summary.csv'\n",
+        "summary_url = 'https://raw.githubusercontent.com/JerryChenz/InvestmentManagementOpen/main/financial_models/Opportunities/Screener/screener_summary.csv'\n",
         "df = pd.read_csv(summary_url)\n",
         "df = df.set_index('Ticker')\n",
         "display(df)"
@@ -50,11 +50,11 @@
         "id": "WVHjB0MTEYqv",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1102
+          "height": 606
         },
-        "outputId": "9177a4ad-97e3-4896-a2fe-d86d7fa89ebc"
+        "outputId": "902206db-e51f-4acd-f41c-dc337c81da9e"
       },
-      "execution_count": 2,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
@@ -148,7 +148,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ffda0c04-b021-45b0-a3b9-fdbfbbe26c0d\">\n",
+              "  <div id=\"df-06e51d96-ee88-43c2-be87-e124df28f541\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -484,7 +484,7 @@
               "</table>\n",
               "<p>199 rows × 29 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ffda0c04-b021-45b0-a3b9-fdbfbbe26c0d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-06e51d96-ee88-43c2-be87-e124df28f541')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -535,12 +535,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ffda0c04-b021-45b0-a3b9-fdbfbbe26c0d button.colab-df-convert');\n",
+              "          document.querySelector('#df-06e51d96-ee88-43c2-be87-e124df28f541 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ffda0c04-b021-45b0-a3b9-fdbfbbe26c0d');\n",
+              "          const element = document.querySelector('#df-06e51d96-ee88-43c2-be87-e124df28f541');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -563,13 +563,6 @@
             ]
           },
           "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Warning: Total number of columns (29) exceeds max_columns (20) limiting to first (20) columns.\n"
-          ]
         }
       ]
     },
@@ -590,12 +583,14 @@
         "lcr = monetary_assets / df['CurrentLiabilities']\n",
         "current_ratio = df['CurrentAssets'] / df['CurrentLiabilities']\n",
         "# dividend rate\n",
-        "dividend_rate = df['Dividend'] / df['Price']"
+        "dividend_rate = df['Dividend'] / df['Price']\n",
+        "# Net PPE/ Sales\n",
+        "ppe_multiple = df['NetPPE'] / df['TotalRevenue']"
       ],
       "metadata": {
         "id": "QRfA0mKCKIUo"
       },
-      "execution_count": 3,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -620,7 +615,7 @@
       "metadata": {
         "id": "HD5bKjVhfio1"
       },
-      "execution_count": 23,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -632,7 +627,7 @@
       "metadata": {
         "id": "sToi5OEXDH_c"
       },
-      "execution_count": 35,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -645,7 +640,7 @@
       "metadata": {
         "id": "UDlmtymwe0ab"
       },
-      "execution_count": 36,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -674,9 +669,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UJVHJswVf0CC",
-        "outputId": "b5031804-a33f-4bff-c918-49815512d812"
+        "outputId": "7b6d218e-a2d6-4076-8f46-a94540d94519"
       },
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,9 +740,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZNCJ7ByIXAI",
-        "outputId": "c8a33680-fe59-471f-b397-d8d791291f4a"
+        "outputId": "8b86ead7-bd23-451d-aefc-c34152d4d6d1"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -775,9 +770,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yzxPJYUtg9Nw",
-        "outputId": "d680824c-8173-4aff-8b1e-a718afb4b13a"
+        "outputId": "de667787-6ba3-4f1c-eb1f-eee19dbb94be"
       },
-      "execution_count": 42,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,9 +807,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rD3pk9YQgV5n",
-        "outputId": "157aa899-b399-440e-bcad-5ae6143b019a"
+        "outputId": "c59a2f2c-1e09-46f3-f28d-12873158a57c"
       },
-      "execution_count": 44,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
