--- a/trading_activity_analysis.ipynb
+++ b/trading_activity_analysis.ipynb
@@ -7,7 +7,8 @@
       "collapsed_sections": [
         "2tPkrUVeFXq1"
       ],
-      "authorship_tag": "ABX9TyMljEaWmW+MokyO5y9HokD2",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM2f6M3i4sSdp4wXWmb/f2x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,42 +115,45 @@
     {
       "cell_type": "code",
       "source": [
-        "# Group by month to calculate volume and VWAP aggregates and date ranges\n",
-        "grouped = df.groupby(pd.Grouper(freq='M'))  # Changed to 'M' for correct monthly grouping\n",
+        "# Group by month\n",
+        "grouped = df.groupby(pd.Grouper(freq='M'))\n",
         "\n",
-        "# Calculate both VWAP and volume\n",
-        "monthly_vwap = grouped['VWAP'].mean().to_frame(name='Monthly VWAP')\n",
+        "# Calculate monthly volume sum\n",
         "monthly_vol = grouped['vol'].sum().to_frame(name='Monthly Volume')\n",
         "\n",
-        "# Combine both calculations\n",
-        "monthly_vol['Monthly VWAP'] = monthly_vwap['Monthly VWAP']\n",
+        "# Calculate correct monthly VWAP: sum(VWAP * volume) / sum(volume)\n",
+        "monthly_vwap = grouped.apply(\n",
+        "    lambda x: (x['VWAP'] * x['vol']).sum() / x['vol'].sum()\n",
+        ").to_frame(name='Monthly VWAP')\n",
         "\n",
-        "# Calculate date ranges\n",
-        "monthly_vol['Start_Date'] = grouped.apply(lambda x: x.index.min())\n",
-        "monthly_vol['End_Date'] = grouped.apply(lambda x: x.index.max())\n",
+        "# Combine results\n",
+        "monthly_stats = pd.concat([monthly_vol, monthly_vwap], axis=1)\n",
         "\n",
-        "# Format dates for readability\n",
-        "monthly_vol['Start_Date'] = monthly_vol['Start_Date'].dt.strftime('%Y-%m-%d')\n",
-        "monthly_vol['End_Date'] = monthly_vol['End_Date'].dt.strftime('%Y-%m-%d')\n",
+        "# Add date ranges\n",
+        "monthly_stats['Start_Date'] = grouped.apply(lambda x: x.index.min())\n",
+        "monthly_stats['End_Date'] = grouped.apply(lambda x: x.index.max())\n",
         "\n",
-        "# Sort by date in descending order\n",
-        "monthly_vol_sorted = monthly_vol.sort_index(ascending=False)\n",
+        "# Format dates\n",
+        "monthly_stats['Start_Date'] = monthly_stats['Start_Date'].dt.strftime('%Y-%m-%d')\n",
+        "monthly_stats['End_Date'] = monthly_stats['End_Date'].dt.strftime('%Y-%m-%d')\n",
         "\n",
-        "# Display results\n",
+        "# Sort descending and clean up\n",
+        "monthly_stats_sorted = monthly_stats.sort_index(ascending=False)\n",
+        "\n",
         "print(\"\\nMonthly Volumes and VWAP:\")\n",
-        "print(monthly_vol_sorted[['Monthly Volume', 'Monthly VWAP', 'Start_Date', 'End_Date']])\n",
+        "print(monthly_stats_sorted[['Monthly Volume', 'Monthly VWAP', 'Start_Date', 'End_Date']])\n",
         "\n",
         "# Save to CSV\n",
-        "monthly_vol_sorted.to_csv('monthly_stats.csv')"
+        "monthly_stats_sorted.to_csv('monthly_stats.csv')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "X7losEyWFkqH",
-        "outputId": "7c232026-858e-4cfc-dceb-6e4d8a38b36c"
+        "outputId": "79856647-61a3-4665-9538-abcfd0e31df0"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,71 +163,71 @@
             "Monthly Volumes and VWAP:\n",
             "            Monthly Volume  Monthly VWAP  Start_Date    End_Date\n",
             "atDate                                                          \n",
-            "2025-04-30         9884000      2.533912  2025-04-01  2025-04-24\n",
-            "2025-03-31         8504000      2.474596  2025-03-03  2025-03-31\n",
-            "2025-02-28         3244000      2.480868  2025-02-03  2025-02-28\n",
-            "2025-01-31         3192000      2.411720  2025-01-02  2025-01-28\n",
-            "2024-12-31         1581720      2.647143  2024-12-02  2024-12-31\n",
-            "2024-11-30         2036000      2.565956  2024-11-01  2024-11-29\n",
-            "2024-10-31         1758160      2.637022  2024-10-02  2024-10-31\n",
-            "2024-09-30         3024840      2.350088  2024-09-02  2024-09-30\n",
-            "2024-08-31         4106514      2.437986  2024-08-01  2024-08-30\n",
-            "2024-07-31         4762000      2.468372  2024-07-02  2024-07-31\n",
-            "2024-06-30         1812440      2.698111  2024-06-03  2024-06-28\n",
-            "2024-05-31         2938300      2.801446  2024-05-02  2024-05-31\n",
-            "2024-04-30         4701400      2.975344  2024-04-02  2024-04-30\n",
-            "2024-03-31         3623182      3.045718  2024-03-01  2024-03-28\n",
-            "2024-02-29         2320000      2.971586  2024-02-01  2024-02-29\n",
-            "2024-01-31         3397472      3.113927  2024-01-02  2024-01-31\n",
-            "2023-12-31         4189546      3.204837  2023-12-01  2023-12-29\n",
-            "2023-11-30         5623000      3.357869  2023-11-01  2023-11-30\n",
-            "2023-10-31        13613760      3.337346  2023-10-03  2023-10-31\n",
-            "2023-09-30        17598658      3.103262  2023-09-04  2023-09-29\n",
-            "2023-08-31        13877328      2.624332  2023-08-01  2023-08-31\n",
-            "2023-07-31         3396552      2.478697  2023-07-03  2023-07-31\n",
-            "2023-06-30         4520000      2.454915  2023-06-01  2023-06-30\n",
-            "2023-05-31         4216000      2.370612  2023-05-02  2023-05-31\n",
-            "2023-04-30         6857800      2.321740  2023-04-03  2023-04-28\n",
-            "2023-03-31         8934592      2.142803  2023-03-01  2023-03-31\n",
-            "2023-02-28         4233800      2.216464  2023-02-01  2023-02-28\n",
-            "2023-01-31         3672904      2.115950  2023-01-03  2023-01-31\n",
-            "2022-12-31         4142840      2.213173  2022-12-01  2022-12-30\n",
-            "2022-11-30         9644000      2.328608  2022-11-01  2022-11-30\n",
-            "2022-10-31         8873600      2.397217  2022-10-03  2022-10-31\n",
-            "2022-09-30         9087000      2.449458  2022-09-01  2022-09-30\n",
-            "2022-08-31        19396000      2.429257  2022-08-01  2022-08-31\n",
-            "2022-07-31        26776880      2.535032  2022-07-04  2022-07-29\n",
-            "2022-06-30        25758084      2.631851  2022-06-01  2022-06-30\n",
-            "2022-05-31         4363288      2.863582  2022-05-03  2022-05-31\n",
-            "2022-04-30         6665771      2.978453  2022-04-01  2022-04-29\n",
-            "2022-03-31        13452802      3.119436  2022-03-01  2022-03-31\n",
-            "2022-02-28        12572250      3.282572  2022-02-04  2022-02-28\n",
-            "2022-01-31        18763337      3.410345  2022-01-03  2022-01-31\n",
-            "2021-12-31        23849334      3.479797  2021-12-01  2021-12-31\n",
-            "2021-11-30        33494492      3.563084  2021-11-01  2021-11-30\n",
-            "2021-10-31        23865958      3.474551  2021-10-04  2021-10-29\n",
-            "2021-09-30        26012576      3.465725  2021-09-01  2021-09-30\n",
-            "2021-08-31        46145064      3.522587  2021-08-02  2021-08-31\n",
-            "2021-07-31        34865398      3.084075  2021-07-02  2021-07-30\n",
-            "2021-06-30        30810416      3.053585  2021-06-01  2021-06-30\n",
-            "2021-05-31        38117958      3.224325  2021-05-03  2021-05-31\n",
-            "2021-04-30        43376080      2.979403  2021-04-01  2021-04-30\n",
-            "2021-03-31       118001984      2.894842  2021-03-01  2021-03-31\n",
-            "2021-02-28       128392706      1.921772  2021-02-01  2021-02-26\n",
-            "2021-01-31       243481500      0.672092  2021-01-04  2021-01-29\n",
-            "2020-12-31        92936000      0.461262  2020-12-01  2020-12-31\n",
-            "2020-11-30       152218000      0.497730  2020-11-02  2020-11-30\n",
-            "2020-10-31        66458000      0.397813  2020-10-05  2020-10-30\n",
-            "2020-09-30        65528000      0.374474  2020-09-01  2020-09-30\n",
-            "2020-08-31       509261200      0.508648  2020-08-14  2020-08-31\n"
+            "2025-04-30         9884000      2.539417  2025-04-01  2025-04-24\n",
+            "2025-03-31         8504000      2.504464  2025-03-03  2025-03-31\n",
+            "2025-02-28         3244000      2.484809  2025-02-03  2025-02-28\n",
+            "2025-01-31         3192000      2.414148  2025-01-02  2025-01-28\n",
+            "2024-12-31         1581720      2.632822  2024-12-02  2024-12-31\n",
+            "2024-11-30         2036000      2.692515  2024-11-01  2024-11-29\n",
+            "2024-10-31         1758160      2.774373  2024-10-02  2024-10-31\n",
+            "2024-09-30         3024840      2.363999  2024-09-02  2024-09-30\n",
+            "2024-08-31         4106514      2.435156  2024-08-01  2024-08-30\n",
+            "2024-07-31         4762000      2.453967  2024-07-02  2024-07-31\n",
+            "2024-06-30         1812440      2.688566  2024-06-03  2024-06-28\n",
+            "2024-05-31         2938300      2.808254  2024-05-02  2024-05-31\n",
+            "2024-04-30         4701400      2.962985  2024-04-02  2024-04-30\n",
+            "2024-03-31         3623182      3.052340  2024-03-01  2024-03-28\n",
+            "2024-02-29         2320000      3.084897  2024-02-01  2024-02-29\n",
+            "2024-01-31         3397472      3.106214  2024-01-02  2024-01-31\n",
+            "2023-12-31         4189546      3.139721  2023-12-01  2023-12-29\n",
+            "2023-11-30         5623000      3.350590  2023-11-01  2023-11-30\n",
+            "2023-10-31        13613760      3.335840  2023-10-03  2023-10-31\n",
+            "2023-09-30        17598658      3.101691  2023-09-04  2023-09-29\n",
+            "2023-08-31        13877328      2.652544  2023-08-01  2023-08-31\n",
+            "2023-07-31         3396552      2.469418  2023-07-03  2023-07-31\n",
+            "2023-06-30         4520000      2.452664  2023-06-01  2023-06-30\n",
+            "2023-05-31         4216000      2.367628  2023-05-02  2023-05-31\n",
+            "2023-04-30         6857800      2.236788  2023-04-03  2023-04-28\n",
+            "2023-03-31         8934592      2.133916  2023-03-01  2023-03-31\n",
+            "2023-02-28         4233800      2.202173  2023-02-01  2023-02-28\n",
+            "2023-01-31         3672904      2.086205  2023-01-03  2023-01-31\n",
+            "2022-12-31         4142840      2.192633  2022-12-01  2022-12-30\n",
+            "2022-11-30         9644000      2.332114  2022-11-01  2022-11-30\n",
+            "2022-10-31         8873600      2.390712  2022-10-03  2022-10-31\n",
+            "2022-09-30         9087000      2.437816  2022-09-01  2022-09-30\n",
+            "2022-08-31        19396000      2.425845  2022-08-01  2022-08-31\n",
+            "2022-07-31        26776880      2.535316  2022-07-04  2022-07-29\n",
+            "2022-06-30        25758084      2.627155  2022-06-01  2022-06-30\n",
+            "2022-05-31         4363288      2.825757  2022-05-03  2022-05-31\n",
+            "2022-04-30         6665771      2.988331  2022-04-01  2022-04-29\n",
+            "2022-03-31        13452802      3.127360  2022-03-01  2022-03-31\n",
+            "2022-02-28        12572250      3.282796  2022-02-04  2022-02-28\n",
+            "2022-01-31        18763337      3.415717  2022-01-03  2022-01-31\n",
+            "2021-12-31        23849334      3.480882  2021-12-01  2021-12-31\n",
+            "2021-11-30        33494492      3.560027  2021-11-01  2021-11-30\n",
+            "2021-10-31        23865958      3.467659  2021-10-04  2021-10-29\n",
+            "2021-09-30        26012576      3.463322  2021-09-01  2021-09-30\n",
+            "2021-08-31        46145064      3.509434  2021-08-02  2021-08-31\n",
+            "2021-07-31        34865398      3.107575  2021-07-02  2021-07-30\n",
+            "2021-06-30        30810416      3.063137  2021-06-01  2021-06-30\n",
+            "2021-05-31        38117958      3.206618  2021-05-03  2021-05-31\n",
+            "2021-04-30        43376080      2.979097  2021-04-01  2021-04-30\n",
+            "2021-03-31       118001984      2.823291  2021-03-01  2021-03-31\n",
+            "2021-02-28       128392706      1.908304  2021-02-01  2021-02-26\n",
+            "2021-01-31       243481500      0.803620  2021-01-04  2021-01-29\n",
+            "2020-12-31        92936000      0.461308  2020-12-01  2020-12-31\n",
+            "2020-11-30       152218000      0.509395  2020-11-02  2020-11-30\n",
+            "2020-10-31        66458000      0.426089  2020-10-05  2020-10-30\n",
+            "2020-09-30        65528000      0.392619  2020-09-01  2020-09-30\n",
+            "2020-08-31       509261200      0.542823  2020-08-14  2020-08-31\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-25-b321368c8571>:2: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
-            "  grouped = df.groupby(pd.Grouper(freq='M'))  # Changed to 'M' for correct monthly grouping\n"
+            "<ipython-input-26-6cd6fd733cac>:2: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+            "  grouped = df.groupby(pd.Grouper(freq='M'))\n"
           ]
         }
       ]
