--- a/trading_activity_analysis.ipynb
+++ b/trading_activity_analysis.ipynb
@@ -8,7 +8,7 @@
         "2tPkrUVeFXq1"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2f6M3i4sSdp4wXWmb/f2x",
+      "authorship_tag": "ABX9TyPqHVji1TagAO0RKTtZNrAY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,7 +106,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Calculate Volumes"
+        "# Monthly View"
       ],
       "metadata": {
         "id": "RwZyBWTIFfyA"
@@ -153,7 +153,7 @@
         "id": "X7losEyWFkqH",
         "outputId": "79856647-61a3-4665-9538-abcfd0e31df0"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "OXcbwsAzFq_8",
         "outputId": "0425fd01-e49d-4eae-a395-d13f156b5315"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
